fix view on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  min-height: 100vh;
+  height: 100%;
 }
 
 footer {
