--- a/src/styles/TrackList.css
+++ b/src/styles/TrackList.css
@@ -75,7 +75,8 @@
   .Tracklist-infos {
     margin: 0 auto;
     padding: 0 0 60px 0;
-    width: 50%;
+    width: 70%;
+    text-align: center;
   }
   .TrackList {
     width: 50%;
